--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.26.2",
+    "jspdf": "^4.2.0",
+    "jspdf-autotable": "^5.0.7",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.12.0",
     "react-scripts": "5.0.1",
+    "recharts": "^3.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
