--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@mui/icons-material": "^7.3.7",
-    "@mui/material": "^7.3.7",
+    "@mui/icons-material": "^7.3.8",
+    "@mui/lab": "^7.0.1-beta.22",
+    "@mui/material": "^7.3.8",
     "@mui/x-date-pickers": "^8.26.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
