--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^4.2.0",
     "jspdf-autotable": "^5.0.7",
+    "pdfjs-dist": "^5.4.624",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
+    "react-pdf": "^10.4.0",
     "react-router-dom": "^7.12.0",
     "react-scripts": "5.0.1",
     "recharts": "^3.7.0",
